# HiGGSR

./: .gitignore  HiGGSR_CPP_Development_Specification_v1.3.md  README.md  __init__.py  cpp_wrap.md  main.py  setup.py
core/: __init__.py  core_logic.py  feature_extraction.py  registration.py  utils.py
cpp/: CMakeLists.txt
cpp/include/higgsr/: registration.h
cpp/src/: registration.cpp
higgs_rc/: CMakeLists.txt  README.md  package.xml  readme.md
higgs_rc/config/: higgsr_config.yaml  lidar_client_config.yaml
higgs_rc/docs/: debug_log.md
higgs_rc/include/higgs_rc/core/: feature_extraction.hpp  registration.hpp  utils.hpp
higgs_rc/include/higgs_rc/nodes/: higgsr_server_node.hpp
higgs_rc/scripts/: visualization_node.py
higgs_rc/src/core/: feature_extraction.cpp  registration.cpp  utils.cpp
higgs_rc/src/nodes/: higgsr_server_main.cpp  higgsr_server_node.cpp
higgsr_interface/: CMakeLists.txt  package.xml
higgsr_interface/msg/: DensityMap.msg  Keypoints.msg  PointCloudInfo.msg
higgsr_interface/srv/: ProcessFiles.srv  RegisterScan.srv  SetGlobalMap.srv
higgsr_ros/: CMakeLists.txt  README.md  README_FILE_PROCESSOR.md  README_RVIZ_VISUALIZATION.md  correction_note.md  package.xml  setup.py  test_cpp_build.py
higgsr_ros/config/: file_processor_config.yaml  higgsr_server_config.yaml
higgsr_ros/higgsr_ros/: __init__.py
higgsr_ros/higgsr_ros/core/: __init__.py
higgsr_ros/higgsr_ros/core/__pycache__/: feature_extraction.apply_transform_to_keypoints_numba-32.py310.1.nbc  feature_extraction.apply_transform_to_keypoints_numba-32.py310.nbi
higgsr_ros/higgsr_ros/core/cpp_src/: bindings.cpp  feature_extraction.cpp  registration.cpp
higgsr_ros/higgsr_ros/core/cpp_src/include/: feature_extraction.hpp  registration.hpp
higgsr_ros/higgsr_ros/core/cpp_wrappers/: __init__.py  feature_extraction_wrapper.py  registration_wrapper.py
higgsr_ros/higgsr_ros/nodes/: __init__.py  file_processor_node.py  higgsr_server_node.py  lidar_client_node.py
higgsr_ros/higgsr_ros/scripts/: __init__.py
higgsr_ros/higgsr_ros/utils/: __init__.py  ros_utils.py
higgsr_ros/higgsr_ros/visualization/: visualization_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/higgsr_ros/share/higgsr_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/higgsr_ros/share/higgsr_ros/config/: visualization_config.yaml
log/: latest_build
python/: __init__.py  setup.py
python/HiGGSR/: main.py
python/HiGGSR/core/: __init__.py  registration.py  registration_cpp_wrapper.py  utils.py
visualization/: visualization_functions.py
